--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,13 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=yes, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>projet_symfony</title>
-</head>
-<body>
+{% extends 'base.html.twig' %}
+{% block body %}
  <h1>coucou</h1>
-</body>
-</html>
+{% endblock  %}
+{% block title %}{{ parent() }} | home {% endblock %}
