--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 {% block body %}
- <h1>coucou</h1>
+ <h1>NOUVEAUTES</h1>
 {% endblock  %}
 {% block title %}{{ parent() }} | home {% endblock %}
