--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base1.html.twig' %}
 
 {% block body %}
 
@@ -10,7 +10,5 @@
 
 {% endblock %}
 
-{% block title %}
-the best series | {{ parent() }}
-{% endblock %}
+
 
