creer plusieurs controller

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,3 +14,8 @@ header img{
 
     height: 140px;
 }
+.series-list{
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
+}
