--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
 
-   <section>
+   <section class="series-list">
        {% for serie in series  %}
        <article>
 
            <a href="#" title="view serie's details">
-               <img src="" alt="{{ serie.string }}">
+               <img src="{{ asset('img/posters/serie/'~serie.poster)}}" alt="{{ serie.backdrop }}">
            </a>
            {% endfor %}
        </article>
