creer plusieurs controller

--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -7,7 +7,7 @@
        <article>
 
            <a href="#" title="view serie's details">
-               <img src="{{ asset('img/posters/serie/'~serie.poster)}}" alt="{{ serie.backdrop }}">
+               <img src="{{ asset('img/posters/serie/' ~serie.poster)}}" alt="{{ serie.name }}" >
            </a>
            {% endfor %}
        </article>
