creer plusieurs controller

--- a/templates/serie/details.html.twig
+++ b/templates/serie/details.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-todo afficher le titre de la série | {{ parent() }}
+{{ serie.name}} | {{ parent() }}
 {% endblock %}
 
 {% block body %}
-
+    <h2>{{ serie.name }}</h2>
+    <div>{{ serie.overview }}</div>
+    <div>{{ serie.vote }}</div>
 {% endblock %}
 
