creer plusieurs controller

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,3 +19,12 @@ header img{
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
 }
+label{
+    display: block;
+}
+input,textarea , select{
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    width: 150px;
+    max-width:50%;
+}
