creer plusieurs controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,12 +18,20 @@
         <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/imagesite.png') }}" alt="projet"/></a></h1>
         {% include('inc/nav.html.twig') %}
     </header>
+    {# read and display all flash messages #}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash flash-{{ label }} >
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     <main>
         {% block body %}
             <h1>salut </h1>
         {% endblock %}
     </main>
-    <footer class="footer">
+    <footer >
 
         <div>{{ "now"|date("Y") }} </div>
 
