--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #B0413E;
+    background-color: bisque;
 }
 .container{
     max-width:1100px;
@@ -8,17 +8,21 @@ body{
 
 }
 img{
-    max-width:100%;
+    max-width:200px;
 }
 header img{
 
     height: 140px;
 }
-.series-list{
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
+.series-list {
+    display: flex;
+    flex-direction: row  ;
+    justify-items: auto;
+    max-width: 300px;
+
+
 }
+
 label{
     display: block;
 }
@@ -28,3 +32,23 @@ input,textarea , select{
     width: 150px;
     max-width:50%;
 }
+.flash{
+
+    width: 20%;
+    padding: 20px;
+    font-weight: bold;
+    font-size: 1.4rem;
+    margin:1rem 0;
+    border-radius: 5px;
+}
+.flash-success{
+
+    background-color: aquamarine;
+}
+button{
+    border-radius: 16px;
+    background-color:aqua;
+    width: 80px;
+    height: 40px;
+}
+
