creer plusieurs controller

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,4 +51,10 @@ button{
     width: 80px;
     height: 40px;
 }
+.footer{
+    text-align: center;
+    background-color: #B0413E;
+    height: 200px;
+
+}
 
