creer plusieurs controller

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,7 +53,7 @@ button{
 }
 .footer{
     text-align: center;
-    background-color: #B0413E;
+    background-color: aqua;
     height: 200px;
 
 }
